--- a/package.json
+++ b/package.json
@@ -4,7 +4,8 @@
   "description": "contact managment system using node.js",
   "main": "server.js",
   "scripts": {
-    "dev": "node src/server.js"
+    "dev": "node src/server.js",
+    "build": "npm install"
   },
   "keywords": [
     "contact"
